Update and rename asmi_pricing_micro_simulation_html.html to index.html

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
       <div class="title">Saved scenarios</div>
       <div id="savedList" class="help">No scenarios yet. Click “Save scenario”.</div>
     </div>
+    <div class="footer">© 2025 <b>micro‑simulation: Prof. Dr. Pravat Surya Kar.</div>
   </div>
 
 <script>
