--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <div class="control"><input type="range" id="awareSpend" min="0" max="150" step="5"><input type="number" id="awareSpendNum"></div>
             </div>
             <div>
-              <label>Awareness level</label>
+              <label>Awareness level (TU: Take up Unit; pp: percentage point) </label>
               <select id="awareLevel">
                 <option value="low">Low (no uplift)</option>
                 <option value="medium">Medium (+6pp TU, +8pp util)</option>
